// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Suspense BeerDrawer 1`] = `<DocumentFragment />`;

exports[`Suspense BeerItem 1`] = `
<DocumentFragment>
  <div
    class="beer-item"
  >
    <div
      class="image"
    >
      <span>
        <span
          class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
          style="width: 50px; height: 100px;"
        >
          ‌
        </span>
      </span>
    </div>
    <div
      class="name"
    >
      <h3>
        <span>
          <span
            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
          >
            ‌
          </span>
        </span>
      </h3>
    </div>
    <span
      class="abv"
    >
      <span>
        <span
          class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
        >
          ‌
        </span>
      </span>
    </span>
    <div
      class="description"
    >
      <span>
        <span
          class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
        >
          ‌
        </span>
        <span
          class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
        >
          ‌
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Suspense BeerList 1`] = `
<DocumentFragment>
  <h3
    class="ant-typography"
  >
    All beer
  </h3>
  <div
    class="beer-list-filters loading"
  >
    <div
      class="ant-spin ant-spin-spinning"
    >
      <span
        class="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
      </span>
    </div>
  </div>
  <div
    class="beer-list"
  >
    <div
      class="beer-item"
    >
      <div
        class="image"
      >
        <span>
          <span
            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style="width: 50px; height: 100px;"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="name"
      >
        <h3>
          <span>
            <span
              class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            >
              ‌
            </span>
          </span>
        </h3>
      </div>
      <span
        class="abv"
      >
        <span>
          <span
            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
          >
            ‌
          </span>
        </span>
      </span>
      <div
        class="description"
      >
        <span>
          <span
            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
          >
            ‌
          </span>
        </span>
      </div>
    </div>
    <div
      class="beer-item"
    >
      <div
        class="image"
      >
        <span>
          <span
            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style="width: 50px; height: 100px;"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="name"
      >
        <h3>
          <span>
            <span
              class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            >
              ‌
            </span>
          </span>
        </h3>
      </div>
      <span
        class="abv"
      >
        <span>
          <span
            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
          >
            ‌
          </span>
        </span>
      </span>
      <div
        class="description"
      >
        <span>
          <span
            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
          >
            ‌
          </span>
        </span>
      </div>
    </div>
    <div
      class="beer-item"
    >
      <div
        class="image"
      >
        <span>
          <span
            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style="width: 50px; height: 100px;"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="name"
      >
        <h3>
          <span>
            <span
              class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            >
              ‌
            </span>
          </span>
        </h3>
      </div>
      <span
        class="abv"
      >
        <span>
          <span
            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
          >
            ‌
          </span>
        </span>
      </span>
      <div
        class="description"
      >
        <span>
          <span
            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
          >
            ‌
          </span>
        </span>
      </div>
    </div>
    <div
      class="beer-item"
    >
      <div
        class="image"
      >
        <span>
          <span
            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style="width: 50px; height: 100px;"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="name"
      >
        <h3>
          <span>
            <span
              class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            >
              ‌
            </span>
          </span>
        </h3>
      </div>
      <span
        class="abv"
      >
        <span>
          <span
            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
          >
            ‌
          </span>
        </span>
      </span>
      <div
        class="description"
      >
        <span>
          <span
            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
          >
            ‌
          </span>
        </span>
      </div>
    </div>
    <div
      class="beer-item"
    >
      <div
        class="image"
      >
        <span>
          <span
            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style="width: 50px; height: 100px;"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="name"
      >
        <h3>
          <span>
            <span
              class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            >
              ‌
            </span>
          </span>
        </h3>
      </div>
      <span
        class="abv"
      >
        <span>
          <span
            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
          >
            ‌
          </span>
        </span>
      </span>
      <div
        class="description"
      >
        <span>
          <span
            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
          >
            ‌
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Suspense RandomBeer 1`] = `
<DocumentFragment>
  <h3
    class="ant-typography"
  >
    I'm feeling lucky
  </h3>
  <div
    class="beer-item"
  >
    <div
      class="image"
    >
      <span>
        <span
          class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
          style="width: 50px; height: 100px;"
        >
          ‌
        </span>
      </span>
    </div>
    <div
      class="name"
    >
      <h3>
        <span>
          <span
            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
          >
            ‌
          </span>
        </span>
      </h3>
    </div>
    <span
      class="abv"
    >
      <span>
        <span
          class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
        >
          ‌
        </span>
      </span>
    </span>
    <div
      class="description"
    >
      <span>
        <span
          class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
        >
          ‌
        </span>
        <span
          class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
        >
          ‌
        </span>
      </span>
    </div>
  </div>
  <button
    class="ant-btn ant-btn-loading"
    disabled=""
    type="button"
  >
    <span
      class="ant-btn-loading-icon"
    >
      <span
        aria-label="loading"
        class="anticon anticon-loading anticon-spin"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </span>
    </span>
    <span>
      New random beer
    </span>
  </button>
</DocumentFragment>
`;
